--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Models\\": "models/"
+            "": "src/classes/"
         }
     },
     "config": {
